# synth2

./: .clang-format  .gitmodules  CMakeLists.txt
gui-mock/: CMakeLists.txt  main.c
include/synth2/: adsr.h  amp.h  filter.h  helper.h  macros.h  osc.h  oscillator.h  params.h  plugin.h  process-event.h  random.h  render-audio.h  voice.h
include/synth2/ext/: audio-ports.h  note-ports.h  params.h
include/synth2/factory/: plugin-factory.h
include/synth2/osc/: macros.h  wave-generator.h  wave.h
include/synth2/plugin/: process-event.h  render-audio.h  voice.h
libs/nuklear/: CMakeLists.txt  README.md
libs/nuklear/src/: CMakeLists.txt
libs/raygui/: CMakeLists.txt  README.md
libs/raygui/src/: CMakeLists.txt
libs/synth2-adsr/: CMakeLists.txt  README.md
libs/synth2-adsr/include/synth2-adsr/: adsr.h
libs/synth2-adsr/include/synth2-adsr/internal/: adsr.h
libs/synth2-adsr/src/: CMakeLists.txt  adsr.c
libs/synth2-filter/: CMakeLists.txt  README.md
libs/synth2-filter/include/: filter.h
libs/synth2-filter/src/: CMakeLists.txt
libs/synth2-osc/: CMakeLists.txt  README.md
libs/synth2-osc/include/synth2-osc/: osc.h
libs/synth2-osc/include/synth2-osc/internal/: macros.h  osc.h  wave-generator.h
libs/synth2-osc/src/: CMakeLists.txt  osc.c  wave-generator.c
src/: CMakeLists.txt  adsr.c  amp.c  entry.c  filter.c  helper.c  osc.c  oscillator.c  params.c  plugin.c  process-event.c  random.c  render-audio.c  voice.c
src/ext/: audio-ports.c  note-ports.c  params.c
src/factory/: plugin-factory.c
src/osc/: wave-generator.c
src/plugin/: process-event.c  render-audio.c
test/: CMakeLists.txt  adsr.c  main.c  stub.c  test-sample.cc
